# cmake-boost-boilerplate-template

./: README.md
mfe/: CMakeLists.txt
mfe/examples/: CMakeLists.txt  black_sholes.cpp
mfe/inc/: mfe_common.h
mfe/src/: CMakeLists.txt  mfe_common.cpp
mfe/test/: CMakeLists.txt  test_mfe_common.cpp
my-project/: CMakeLists.txt
my-project/src/: CMakeLists.txt  api.cpp  api.h  main.cpp
my-project/test/: CMakeLists.txt  my_test.cpp
